--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -1,8 +1,9 @@
 
-
 spring.datasource.url=jdbc:mysql://localhost:3306/book_stall
 spring.datasource.username=root
 spring.datasource.password=P@ssword
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 server.port=8888
+
+spring.datasource.hikari.maximum-pool-size=20
