--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto = update
 server.port=8888
 
 spring.datasource.hikari.maximum-pool-size=30
+
+
+application.theme.color:dark
