--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -5,8 +5,5 @@ spring.datasource.password=P@ssword
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 server.port=8888
-
 spring.datasource.hikari.maximum-pool-size=30
-
-
-application.theme.color:dark
+application.theme.color=dark
