--- a/book-service-dev.properties
+++ b/book-service-dev.properties
@@ -1,8 +1,6 @@
-# H2 Database Configuration
 spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create-drop
-server.port=2222
+spring.jpa.hibernate.ddl-auto=update
