--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -3,3 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=P@ssword
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
+
+
+spring.datasource.hikari.maximum-pool-size=20
