--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -7,4 +7,4 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.hikari.maximum-pool-size=30
 
-application.theme.color=dark
+application.theme.color=blue
